--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Vizitka Elišky Veselé</title>
 	<link rel="stylesheet" href="style.css">
+	<link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-
+<div class="box contentbox" >
+	<div class="img">
 	<img src="images/foto.jpg" alt="Eliška Veselá">
+	</div>
 
 	<h1>Eliška Veselá</h1>
 
@@ -16,8 +19,11 @@
 
 	<p>I přes velké pracovní nasazení si každý den najde čas na svou dceru a dva psy. Ráda jezdí na koni, plave a chodí po horách. Její vysněná dovolená je strávit půl roku v kanadské divočině.</p>
 
-	<a href="https://twitter.com/">Twitter</a>
-	<a href="https://www.facebook.com/">Facebook</a>
+<ul class="menu">
+	<li class="twitter"><a href="https://twitter.com/">Twitter</a></li>
+	<li class="fb"><a href="https://www.facebook.com/">Facebook</a></li>
+</ul>
 
+</div>
 </body>
 </html>
